--- a/minip1-cv-mimic/index.html
+++ b/minip1-cv-mimic/index.html
@@ -19,6 +19,7 @@
         <div id="game">
           <div id="target">?</div>
           <div id="score">Score: 0 / 0</div>
+          <div id="time">Time Left: 0</div>
         </div>
         <div id="controls">
           <button id="start" onclick="onStart()">Start</button>
