--- a/minip1-cv-mimic/index.html
+++ b/minip1-cv-mimic/index.html
@@ -20,6 +20,7 @@
           <div id="target">?</div>
           <div id="score">Score: 0 / 0</div>
           <div id="time">Time Left: 0</div>
+          <div id="gameresult">?</div>
         </div>
         <div id="controls">
           <button id="start" onclick="onStart()">Start</button>
